# StainAnalysis-plugin

./: AngleHistogram.cpp  AngleHistogram.h  BasisTransform.cpp  BasisTransform.h  CMakeLists.txt  ColorDeconvolutionKernel.cpp  ColorDeconvolutionKernel.h  LICENSE  MacenkoHistogram.cpp  MacenkoHistogram.h  NiethammerHistogram.cpp  NiethammerHistogram.h  ODConversion.h  README.md  RandomPixelChooser.cpp  RandomPixelChooser.h  RandomWSISampler.cpp  RandomWSISampler.h  StainAnalysis-plugin.cpp  StainAnalysis-plugin.h  StainAnalysis-plugin.info.in  StainAnalysis.cpp  StainAnalysis.h  StainProfile.cpp  StainProfile.h  StainRGBFromROI.cpp  StainRGBFromROI.h  StainVectorBase.cpp  StainVectorBase.h  StainVectorFromSVD.cpp  StainVectorFromSVD.h  StainVectorICA.cpp  StainVectorICA.h  StainVectorMLPACK.cpp  StainVectorMLPACK.h  StainVectorMacenko.cpp  StainVectorMacenko.h  StainVectorMath.cpp  StainVectorMath.h  StainVectorNMF.cpp  (+9 more)
defaultprofiles/: HematoxylinPDAB.xml  HematoxylinPDABFromRJ.xml  HematoxylinPEosin.xml  HematoxylinPEosinFromRJ.xml  HematoxylinPEosinPDAB.xml  HematoxylinPEosinPDABFromRJ.xml  HematoxylinPEosinSample.xml
